Added static Config Added last opened/created project in OpenODForm as suggestion

--- a/VSProject/PrepareData/CNN_Creator_Trainer_Evaluater/CNN_Creator_Trainer_Evaluater.csproj
+++ b/VSProject/PrepareData/CNN_Creator_Trainer_Evaluater/CNN_Creator_Trainer_Evaluater.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ImageCreator.cs" />
     <Compile Include="JsonFile.cs" />
     <Compile Include="JSON_Reader.cs" />
+    <Compile Include="LocalConfig.cs" />
     <Compile Include="ObjectDetectionMenuForm.cs">
       <SubType>Form</SubType>
     </Compile>
